Increase project container width to solve a bug that makes the project card in not centered when they are  displayed only with one column

--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 48px;
-    width: 80%;
+    width: 90%;
 
 }
 
